syntax = "proto3";
package raft;
import "google/protobuf/duration.proto";

service Raft {
    rpc RequestVote(VoteRequest) returns (VoteResponse);
    rpc AppendEntries(EntryRequest) returns (EntryResponse);
}

message VoteRequest {
    int32 term = 1;
    int32 candidateId = 2;
    int32 lasLogIndex = 3;
    int32 lastLogTerm =4;
}

message VoteResponse {
    int32 term = 1;
    bool voteGranted = 2;
}

message Entry {
    int32 id = 1;
}

message EntryRequest {
    int32 term = 1;
    int32 leaderId = 2;
    int32 prevLogIndex =3;
    int32 prevLogTerm = 4;
    repeated Entry entries = 5;
    int32 leaderCommit =6;
}

message EntryResponse {
    int32 term = 1;
    bool success =2;
}
